# cli-expense-tracker

./: .gitignore  README.md  expense_tracker.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_expense_tracker.py
