[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cli-expense-tracker"
version = "0.2.0"
description = "CLI Expense Tracker — add, list, search, edit, delete, summarize, and export expenses"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
expense-tracker = "expense_tracker:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
